--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-highlight",
-  "version": "1.2.8",
+  "version": "1.3.0",
   "description": "Highlight a given term(s) inside the `{{highlight-terms}}` component block",
   "keywords": [
     "ember-addon",
@@ -32,6 +32,7 @@
     "jquery-highlight": "^3.4.0"
   },
   "devDependencies": {
+    "@ember/jquery": "2.0.0",
     "broccoli-asset-rev": "^2.4.5",
     "broccoli-stew": "^1.5.0",
     "ember-ajax": "^3.0.0",
